# AI-interviewer

./: .gitignore  README.md  TODO.md  calude.py  db.sqlite3  log.csv  manage.py  media.py  mediapipe.ipynb  package-lock.json  pyproject.toml  requirements.txt
AI_mock_interviewer/: asgi.py  settings.py  urls.py  wsgi.py
ai_recruitment/: asgi.py  settings.py  urls.py  wsgi.py
core/: LLM_prompt.py  admin.py  consumers.py  detection.py  forms.py  iris_calibration.py  models.py  resume_analysis.py  routing.py  urls.py  views.py
core/migrations/: 0001_initial.py  0002_remove_resumeanalysis_id_resumeanalysis_analysis_id.py  0003_remove_resumeanalysis_analysis_id_resumeanalysis_id.py  0004_remove_resumeanalysis_id_resumeanalysis_analysis_id.py  0005_alter_resumeanalysis_jd.py  0006_resumeanalysis_created_at.py
frontend/: hr_dashboard.html  index.html  user_resume_shortlist.html
interview/: admin.py  forms.py  models.py  question_and_answer_pipeline.py  question_generation.py  urls.py  views.py
interview-management-service/: interview_management.db  main.py
interview-management-service/frontend/: schedule_form.html
mock_mahee/: apps.py  models.py  serializers.py  urls.py  views.py
payment/: admin.py  models.py  signals.py  urls.py  views.py
question-generation-service/: main.py  requirements.txt
resume-analysis-service/: main.py  requirements.txt
resume-shortlisting-service/: main.py  requirements.txt
stt-service/: main.py  requirements.txt
templates/: base.html  checkout.html  coupon_redeem.html  dashboard.html  index.html  interview.html  interview_result.html  interview_setup.html  landing_page.html  payment_success.html  payment_verify.html  question_result.html  resume_analysis.html  vendor_page.html
tts-service/: main.py  requirements.txt
(+91 files in other folders)
