[project]
name = "ai-mock-interviewer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "channels>=4.3.2",
    "daphne>=4.2.1",
    "django>=6.0.3",
    "django-allauth[socialaccount]>=65.16.1",
    "mediapipe>=0.10.33",
    "opencv-python>=4.13.0.92",
]
