[project]
name = "ai-mock-interviewer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "azure-storage-blob>=12.28.0",
    "cashfree-pg>=5.0.6",
    "dj-database-url>=3.1.2",
    "django>=6.0.3",
    "django-allauth[socialaccount]>=65.16.1",
    "django-storages>=1.14.6",
    "groq>=0.37.1",
    "langchain-community>=0.4.1",
    "langchain-groq>=1.1.2",
    "langchain-huggingface>=1.2.2",
    "langchain-openai>=1.1.16",
    "mediapipe>=0.10.33",
    "numpy>=2.4.4",
    "opencv-python>=4.13.0.92",
    "psycopg[binary]>=3.3.4",
    "pydantic>=2.13.3",
    "pypdf>=6.10.2",
    "python-dotenv>=1.2.2",
    "scikit-learn>=1.8.0",
    "sentence-transformers>=5.4.1",
]
